appId: com.vaidyakhil.myapplication
tags:
  - android

jsEngine: graaljs

---
- launchApp:
    clearState: true
    arguments:
      # populate this env variabe when running tests with maestro cli
      base-url: "${MOCK_SERVER_URL}"

- assertVisible: "1"

- tapOn: decrease
- assertVisible: "0"

- runScript:
    file: ../scripts/quantity_selector.js
    env:
      env_base_url: "${MOCK_SERVER_URL}"
      env_action_type: "decrease"
      env_response: "error"
- tapOn: decrease
# items did not change
- assertVisible: "0"
# assert on error toast
- assertVisible: "number of items cannot be less than 0"
# wait till toast disappears
- extendedWaitUntil:
    visible: "increase" 

- runScript:
    file: ../scripts/quantity_selector.js
    env:
      env_base_url: "${MOCK_SERVER_URL}"
      env_action_type: "increase"
      env_response: 1
- tapOn: 
    text: increase
    # had to be added to fix flaky behaviour
    #tap would not register else
    retryTapIfNoChange: true
- assertVisible: "1"

- runScript:
    file: ../scripts/quantity_selector.js
    env:
      env_base_url: "${MOCK_SERVER_URL}"
      env_action_type: "increase"
      env_response: 2
- tapOn: 
    text: increase
    # had to be added to fix flaky behaviour
    #tap would not register else
    retryTapIfNoChange: true
- assertVisible: "2"      

- runScript:
    file: ../scripts/quantity_selector.js
    env:
      env_base_url: "${MOCK_SERVER_URL}"
      env_action_type: "increase"
      env_response: 'error'
- tapOn: 
    text: increase
    # had to be added to fix flaky behaviour
    #tap would not register else
    retryTapIfNoChange: true
# assert on error toast
- assertVisible: "items cannot be more than 2"
# items did not change
- assertVisible: "2"